[project]
name = "teddycloudhelper"
version = "0.1.0"
description = "Interactive, menu-driven CLI toolkit to set up and manage a self-hosted TeddyCloud server"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "cryptography>=42.0",
    "bcrypt>=4.0",
    "platformdirs>=4.0",
]

[project.scripts]
teddycloudhelper = "teddycloudhelper.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teddycloudhelper"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "docker: integration tests that need a real Docker daemon (enable with TCH_DOCKER_TESTS=1)",
]
