[project]
name = "teddycloudhelper"
version = "0.16.2"
description = "Interactive, menu-driven CLI toolkit to set up and manage a self-hosted TeddyCloud server"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "F", email = "mail@furkanfidan.de" }]
keywords = ["teddycloud", "toniebox", "docker", "self-hosted", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "questionary>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "cryptography>=42.0",
    "bcrypt>=4.0",
    "platformdirs>=4.0",
]

[project.urls]
Repository = "https://github.com/ffidan61/TeddyCloudHelper"
Issues = "https://github.com/ffidan61/TeddyCloudHelper/issues"

[project.scripts]
teddycloudhelper = "teddycloudhelper.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teddycloudhelper"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "docker: integration tests that need a real Docker daemon (enable with TCH_DOCKER_TESTS=1)",
]
